Hero section scroll fix on mobile v5

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,4 +21,9 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-y: auto;
+}
+
+canvas {
+  touch-action: pan-y !important;
 }
